--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Cruz</string>
+    <string name="app_name">Sample</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="phone">Phone</string>
@@ -11,7 +11,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
-    <string name="google_maps_key">AIzaSyADleOUYtXsbJlWrtQD9rhd0Eh1xnDE7b4</string>
+    <string name="google_maps_key">google_map_key</string>
     <string name="action_cancel">Cancel</string>
     <string name="enter_a_name">Please enter a name</string>
     <string name="enter_a_email">Please enter an email</string>
